# zero2prod

./: .sqlfluff  Cargo.toml  compose.yaml  configuration.yaml
.cargo/: config.toml
.github/workflows/: audit.yml  core.yml  test.yml
migrations/: 20250323213734_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
